After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 142219 - LaTeX borders not working correctly in 1.2x and 1.3
LaTeX borders not working correctly in 1.2x and 1.3
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export HTML
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-05-09 21:49 UTC by Adrian Custer
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Adrian Custer 2004-05-09 21:49:08 UTC
The LaTeX exporter seems broken. Vertical borders consisting of thin borders are
rendering incorrectly either being absent or being doubled up. 

A particular example:

1) new gnumeric
2) A1 gets "a"
3) C3 gets "b"
4) Select A1:C3, add thin borders everywhere
5) Select A1:C3, add a thick outer box border
6) Save as LaTeX
7) LaTeX or pdflatex the file
==> this does not result in a set of boxes the way it used to
Comment 1 Andreas J. Guelzow 2004-05-11 14:41:11 UTC
This is due to the backported "fix" for bug #100372
Comment 2 Andreas J. Guelzow 2004-05-11 15:00:19 UTC
I have undone the "fix" for bug #100372 since this problem is more serious.
Comment 3 Andreas J. Guelzow 2004-05-11 15:04:38 UTC
and backported this undoing to 1.2.x