http://bugzilla.gnome.org/show_bug.cgi?id=142219 Undo last patch.

2004-05-11  Andreas J. Guelzow <aguelzow@taliesin.ca>

	http://bugzilla.gnome.org/show_bug.cgi?id=142219
	* latex.c (latex2e_find_vline) : Undo last patch.